🐛 fix buttons causing line-breaks on small screens

--- a/static/main.css
+++ b/static/main.css
@@ -250,6 +250,7 @@ table ul li {
     padding: 7px 21px;
     line-height: 18px;
     border-radius: 3px;
+    display: inline-block;
 }
 
 .btn:hover, .btn:focus {
